WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
212900
JavaScriptCore: Fix PLATFORM(TVOS) macro
https://bugs.webkit.org/show_bug.cgi?id=212900
Summary
JavaScriptCore: Fix PLATFORM(TVOS) macro
Jonathan Bedard
Reported
2020-06-08 07:44:12 PDT
PLATFORM(TVOS) will always resolve to false, and should be PLATFORM(APPLETV)\.
Attachments
Patch
(1.27 KB, patch)
2020-06-08 08:03 PDT
,
Jonathan Bedard
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2020-06-08 07:57:32 PDT
<
rdar://problem/64118879
>
Jonathan Bedard
Comment 2
2020-06-08 08:03:31 PDT
Created
attachment 401338
[details]
Patch
EWS
Comment 3
2020-06-08 09:11:34 PDT
Committed
r262719
: <
https://trac.webkit.org/changeset/262719
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 401338
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug