JavaScriptCore: Fix PLATFORM(TVOS) macro https://bugs.webkit.org/show_bug.cgi?id=212900 <rdar://problem/64118879>

Unreviewed build fix.


* tools/JSDollarVM.cpp:
(JSC::functionIsMemoryLimited): PLATFORM(TVOS) should be PLATFORM(APPLETV).


Canonical link: https://commits.webkit.org/225716@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262719 268f45cc-cd09-0410-ab3c-d52691b4dbfc